package de.neeroxz.core.usecase.exercise;

public class CreateExerciseUseCase
{
}
